update  to dark mode

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -12,8 +12,8 @@ code {
 }
 
 .highlighter-rouge { 
-  background-color: #FAFAFA; 
-  color: #FF554A; 
+  background-color: rgb(27, 29, 30);
+  color: rgb(255, 88, 77);
 }
 
 .highlight .c { color: #586E75 } /* Comment */
