--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,11 +7,15 @@
 $blue: #4183C4;
 
 // Grays
+// $darkerGray: #222;
+// $darkGray: #333;
+// $gray: #666;
+// $lightGray: #eee;
 $black: #000;
-$darkerGray: #222;
-$darkGray: #333;
-$gray: #666;
-$lightGray: #eee;
+$darkerGray: rgb(211, 207, 201);
+$darkGray: rgb(200, 195, 188);
+$gray: rgb(168, 160, 149);
+$lightGray: rgb(34, 36, 38);
 $white: #fff;
 
 // Font stacks
