update table bg to dark mode

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -93,8 +93,8 @@ table {
 }
 
 table tr {
-	border-top: 1px solid #cccccc;
-	background-color: white;
+  border-top-color: rgb(62, 68, 70);
+  background-color: rgb(24, 26, 27);
 	margin: 0;
 	padding: 0;
 }
