update background color

--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -11,7 +11,7 @@ code {
 }
 
 .highlighter-rouge { 
-    background-color: #FAFAFA; 
+    background-color: rgb(27, 29, 30);
     color: #FF554A; 
     font-size: 16px;
 }
