update highlight color

--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -12,7 +12,7 @@ code {
 
 .highlighter-rouge { 
     background-color: rgb(27, 29, 30);
-    color: #FF554A; 
+    color: rgb(255, 88, 77);
     font-size: 16px;
 }
 
